FIx issue where text color is the same as the background color causing invisible text

--- a/preset/component_overrides/_v-autocomplete.scss
+++ b/preset/component_overrides/_v-autocomplete.scss
@@ -50,7 +50,7 @@
     }
     .v-list-item--active.v-list-item--highlighted {
       background-color: map-get($teal2, 'lighten4') !important;
-      color: map-get($teal2, 'lighten4') !important;
+      color: map-get($teal2, 'darken1') !important;
 
       &::before { opacity: 0 !important; }
     }
